--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Speed Copy Messages</title>
+    <title>Hygiene Guide Host</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,8 +81,8 @@
 </head>
 <body>
 
-    <h1>⚡ High-Speed Copy Messages</h1>
-    <p>The text is small to reduce clutter, and the buttons are large for fast, easy clicking.</p>
+    <h1>Hygiene Gudie Host</h1>
+    <p>Easy fast copy paste guide made by Steve</p>
 
     <script>
         function copyText(elementId, buttonElement) {
