--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-    <h1>Hygiene Gudie Host</h1>
+    <h1>Hygiene Guide Host</h1>
     <p>Easy fast copy paste guide made by Steve</p>
 
     <script>
